<resources>
    <string name="app_name">MapinAndroid</string>
    <string name="application_name">まっぴん</string>
    <string name="file_name">設置ファイル</string>
    <string name="info_name">情報</string>
    <string name="location">住所</string>
    <string name="business_time">営業時間</string>
    <string name="url">URL</string>
    <string name="phone_number">電話番号</string>
    <string name="search">検索</string>
    <string name="send">送信</string>
    <string name="inquiry">へのお問い合わせ</string>
    <string name="sentence">まっぴんへのご意見・ご要望を入力して下さい。
                            サービスの向上に努めてまいります。また、不
                            適切なファイルや不快な内容のファイル等が
                            ございましたらご連絡ください。</string>
    <string name="inquiry_content">お問い合わせ内容</string>
    <string name="input_form">テキスト入力（1000文字以内）</string>
    <string name="store_name">店舗名</string>
    <string name="company_name">企業名</string>
    <string name="category">カテゴリー</string>
    <string name="update_date">更新日</string>
    <string name="number">件数：◯◯件</string>
    <string name="detail_information">店舗の詳細情報</string>

    <!-- menu used -->
    <string name="opt_menu_01">設定</string>
    <string name="opt_menu_02">お問い合わせ</string>


    <string-array name="spinner">
        <item>問い合わせ件名サンプル1</item>
        <item>問い合わせ件名サンプル2</item>
        <item>問い合わせ件名サンプル3</item>
        <item>問い合わせ件名サンプル4</item>
    </string-array>

    <string-array name="filter">
        <item>並び替え</item>
        <item>ジャンル</item>
        <item>ファイル形式</item>

    </string-array>
    <string name="title_activity_content_file">ContentFileActivity</string>

</resources>
