<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/selected_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/relativeLayout5"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/relativeLayout5"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:weightSum="1"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/store_name"
                android:textSize="30sp"
                android:layout_weight="0.17" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:text="@string/category" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:text="@string/company_name" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_alignLeft="@+id/textView20"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/textView20"
                android:layout_below="@+id/textView20"
                android:text="@string/update_date" />

        </LinearLayout>

        <Button
            android:id="@+id/Button01"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/Button03"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:text="@string/detail_information"
            android:visibility="visible" />

        <Button
            android:id="@+id/Button03"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/linearLayout"
            android:text="@string/file_name"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view5">

        <ListView
            android:id="@+id/listView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible"/>

        <ListView
            android:id="@+id/listView02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>


    </RelativeLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_marginTop="210dp"
        android:background="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
