<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.motty.mapinandroid.InquiryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:layout_marginTop="280dp"
            android:text="@string/inquiry_content" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="13dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="370dp"
            android:layout_height="180dp"
            android:background="@drawable/line"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/input_form"
            android:maxLength="1000"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinner"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/spinner"
            android:layout_marginTop="114dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/sentence"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:background="@drawable/spinner_design"
            android:entries="@array/spinner"
            android:layout_alignStart="@+id/editText"
            android:layout_alignEnd="@+id/editText" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="3px"
            android:layout_marginTop="225dp"
            android:background="@color/black"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="3px"
            android:layout_marginTop="100dp"
            android:background="@color/black"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="100dp"
                    app:srcCompat="@drawable/splash" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/inquiry"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>



